--- a/views/alimentos.html
+++ b/views/alimentos.html
@@ -29,150 +29,150 @@
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </nav>
+            </div>
             <div class="linea"></div>
-                  <!--ends header-->
-    <main> 
+                  <!--ends header--> 
+    <h2>Alimentos naturales</h2> 
+    <main class="alimentos"> 
                         <!--producto1-->
-        <h2>Alimentos naturales</h2> 
-     <div class="contenedor-aa mt-2">
+       
         <div class="alimento">
-            <h3 class="titulo">Pistachos</h3>
-            <img class="img" src="../img/pistachos-alimentos.jpg " alt="pistachos">
-          
-            <table border="1px" class="table">
-                <tr>
-                    <th>Nombre</th>
-                    <th>Cantidad</th>
-                </tr>
-                <tr>
-                    <td>Agua</td>
-                    <td>4.37 g</td>
-                </tr>
-                <tr>
-                    <td>Calorías</td>
-                    <td>560 Kcal</td>
-                </tr>
-                <tr>
-                    <td>Proteínas</td>
-                    <td>20 g</td>
-                </tr>
-                <tr>
-                    <td>Grasas Totales</td>
-                    <td>45 g</td>
-                </tr>
-            </table> 
-             <a href="pistacho.html" >
-                <button class="comprar ">Comprar</button>
-            </a>
-            <p class="parrafo">Los frutos secos, como los pistachos, son una parte integral de una dieta saludable. No sólo son naturalmente bajos en sodio y azúcar, sino que los pistachos son reconocidos por su impacto positivo en la salud del corazón, el peso y el control del azúcar en la sangre.
-            </p>
-        </div>
-    </div>
-                        <!--producto2-->
-    <div class="contenedor-aa">
-        <div class="alimento">
-             <h3 class="titulo">Aceite de oliva</h3>
-            <img class="img" src="../img/oliva-producto.jpg" alt="aceite de oliva">
-                    <a  href="oliva.html">
-                        <button class="comprar">Comprar</button>
-                    </a>
+            <div class="imgAlimento">
+                <img src="../img/pistachos-alimentos.jpg" alt="pistachos">
+            </div>
+            <div class="infoAlimento">
+                <div class="tabla">
+                    <table class="table table table-dark table-striped">
+                        <tbody>
+                        <tr>
+                            <th>Nombre</th>
+                            <th>Cantidad</th>
+                        </tr><tr>
+                            <td>Agua</td>
+                            <td>4.37 g</td>
+                        </tr>
+                        <tr>
+                            <td>Calorías</td>
+                            <td>560 Kcal</td>
+                        </tr>
+                        <tr>
+                            <td>Proteínas</td>
+                            <td>20 g</td>
+                        </tr>
+                        <tr>
+                            <td>Grasas Totales</td>
+                            <td>45 g</td>
+                        </tr>
+                    </table>
+                </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime magni iste aliquam ipsa, at deserunt vero quo repudiandae, rem quas eaque sed expedita vitae nisi. Vero repellat aliquam unde debitis sapiente error distinctio possimus deleniti numquam est porro quaerat doloribus non rerum eaque, accusamus excepturi. Magni quibusdam cum deserunt inventore perferendis laboriosam ipsam sapiente quas ea veniam! Illo modi temporibus nostrum, aut amet alias facilis fuga eligendi libero itaque necessitatibus!</p>
+                    <a href="pistacho.html" class="btn">Comprar</a>
+                </div>
             
-             <table class="table" border="1px">
-                 <tr>
-                     <th>Nombre</th>
-                     <th>Cantidad</th>
-                 </tr>
-                 <tr>
-                     <td>Agua</td>
-                     <td>0 g</td>
-                 </tr>
-                 <tr>
-                     <td>Calorías</td>
-                     <td>884 Kcal</td>
-                 </tr>
-                 <tr>
-                     <td>Proteínas</td>
-                     <td>0 g</td>
-                 </tr>
-                 <tr>
-                     <td>Grasas Totales</td>
-                     <td>14 g</td>
-                 </tr>
-             </table> 
-             <p class="parrafo">El aceite de oliva protege contra la inflamación, el estrés oxidativo y el riesgo cardiovascular provocados por el envejecimiento.</p>
-             </div>
         </div>
-                        <!--producto3-->
-    <div class="contenedor-aa">
-       <div class="alimento">
-        <h3 class="titulo">Miel</h3>
-                <img class="img" src="../img/miel-alimento.jpg" alt="miel">
-                <a href="miel.html">
-                    <button class="comprar">Comprar</button>
-                </a>
-                
-             <table class="table" border="1px">
-                 <tr>
-                     <th>Nombre</th>
-                     <th>Cantidad</th>
-                 </tr>
-                 <tr>
-                     <td>Agua</td>
-                     <td>17 g</td>
-                 </tr>
-                 <tr>
-                     <td>Calorías</td>
-                     <td>304 Kcal</td>
-                 </tr>
-                 <tr>
-                     <td>Proteínas</td>
-                     <td>0.3 g</td>
-                 </tr>
-                 <tr>
-                     <td>Grasas Totales</td>
-                     <td>0 g</td>
-                 </tr>
-                 <tr>
-                    <td>Azucares</td>
-                    <td>82 g</td>
-             </table>
-             <p class="parrafo">La miel tiene propiedades antibióticas y antibacterianas, ayudando a evitar infecciones, gripes y resfriados. El agua con miel en ayunas es un excelente remedio para aumentar las defensas y prevenir una gran cantidad de enfermedades.</p>
-       </div>
-    </div>
-                        <!--producto4-->
-    <div class="contenedor-aa">
-       <div class="alimento">
-        <h3 class="titulo">Pasas</h3>
-            <img src="../img/pasas-alimentos.jpg" alt="pasas">
-            
-                <a href="pasas.html">
-                    <button class="comprar">Comprar</button>
-                </a>
-            <p class="parrafo">Al ser una fuente rica de hierro, ayudan al transporte de oxígeno a las células del organismo y favorecen la producción de glóbulos rojos, previniendo la anemia.</p>
-             <table class="table" border="1px">
-                 <tr>
-                     <th>Nombre</th>
-                     <th>Cantidad</th>
-                 </tr>
-                 <tr>
-                     <td>Agua</td>
-                     <td>7 g</td>
-                 </tr>
-                 <tr>
-                     <td>Calorías</td>
-                     <td>297 Kcal</td>
-                 </tr>
-                 <tr>
-                     <td>Proteínas</td>
-                     <td>2,5 g</td>
-                 </tr>
-                 <tr>
-                     <td>Grasas Totales</td>
-                     <td>0 g</td>
-                 </tr>
-             </table>
-       </div>
-    </div>
+                                    <!--producto2-->
+       
+         <div class="alimento">
+            <div class="imgAlimento">
+                <img src="../img/aceite-tienda.jpg" alt="pistachos">
+            </div>
+            <div class="infoAlimento">
+                <div class="tabla">
+                    <table class="table table table-dark table-striped">
+                        <tbody>
+                        <tr>
+                            <th>Nombre</th>
+                            <th>Cantidad</th>
+                        </tr><tr>
+                            <td>Agua</td>
+                            <td>4.37 g</td>
+                        </tr>
+                        <tr>
+                            <td>Calorías</td>
+                            <td>560 Kcal</td>
+                        </tr>
+                        <tr>
+                            <td>Proteínas</td>
+                            <td>20 g</td>
+                        </tr>
+                        <tr>
+                            <td>Grasas Totales</td>
+                            <td>45 g</td>
+                        </tr>
+                    </table>
+                </div>
+                    <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci ea inventore reprehenderit perferendis error quasi ipsam eum cupiditate tenetur esse natus at, delectus repellendus, impedit voluptates nulla eveniet, itaque asperiores magni aut nisi. Consequuntur sapiente praesentium repellendus eligendi hic rerum iusto, minima libero. Accusamus praesentium iste, perferendis ratione ipsa ea velit, iure rem illum labore in exercitationem illo molestias et, sint id numquam ex enim nostrum cupiditate impedit. Cupiditate, iure.</p>
+                    <a href="oliva.html" class="btn">Comprar</a>
+                </div>
+        </div>
+                                 <!--producto3-->
+         <div class="alimento">
+            <div class="imgAlimento">
+                <img src="../img/miel-alimento.jpg" alt="pistachos">
+            </div>
+            <div class="infoAlimento">
+                <div class="tabla">
+                    <table class="table table table-dark table-striped">
+                        <tbody>
+                        <tr>
+                            <th>Nombre</th>
+                            <th>Cantidad</th>
+                        </tr><tr>
+                            <td>Agua</td>
+                            <td>4.37 g</td>
+                        </tr>
+                        <tr>
+                            <td>Calorías</td>
+                            <td>560 Kcal</td>
+                        </tr>
+                        <tr>
+                            <td>Proteínas</td>
+                            <td>20 g</td>
+                        </tr>
+                        <tr>
+                            <td>Grasas Totales</td>
+                            <td>45 g</td>
+                        </tr>
+                    </table>
+                </div>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero nihil error in! Soluta iusto veniam facilis voluptatum facere? Harum beatae itaque ex impedit voluptates quod, similique ipsa quo exercitationem voluptatum minima deleniti maxime non et accusamus, illo iusto culpa recusandae necessitatibus. Recusandae saepe, nisi in tempora et temporibus blanditiis itaque fugiat vel corporis voluptate neque necessitatibus facere ex, nihil aut ea eos fuga id eius ut dolor quae aperiam? Ipsa!</p>
+                    <a href="miel.html" class="btn">Comprar</a>
+                </div>
+        </div>
+                                            <!--producto4-->
+         <div class="alimento mb-3">
+            <div class="imgAlimento">
+                <img src="../img/pasas-alimentos.jpg" alt="pistachos">
+            </div>
+            <div class="infoAlimento">
+                <div class="tabla">
+                    <table class="table table table-dark table-striped">
+                        <tbody>
+                        <tr>
+                            <th>Nombre</th>
+                            <th>Cantidad</th>
+                        </tr><tr>
+                            <td>Agua</td>
+                            <td>4.37 g</td>
+                        </tr>
+                        <tr>
+                            <td>Calorías</td>
+                            <td>560 Kcal</td>
+                        </tr>
+                        <tr>
+                            <td>Proteínas</td>
+                            <td>20 g</td>
+                        </tr>
+                        <tr>
+                            <td>Grasas Totales</td>
+                            <td>45 g</td>
+                        </tr>
+                    </table>
+                </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur sint distinctio dolor ullam ab nulla voluptatibus accusamus ipsum modi non laborum suscipit odio expedita, reiciendis, id nam labore odit consequatur quisquam aliquid omnis? Nihil saepe facilis ducimus, ullam pariatur atque. Tempora, ut. Sequi earum dicta repudiandae sapiente sed harum, error quos ex perferendis corrupti explicabo molestias nisi aperiam ducimus excepturi cupiditate vitae. Ipsum itaque blanditiis minus aspernatur consequuntur? Quia, natus.</p>
+                    <a href="pasas.html" class="btn">Comprar</a>
+                </div>
+        </div>
     </main>
                   <!--ends main-->
                   <!--Empieza footer-->
