--- a/css/style.css
+++ b/css/style.css
@@ -376,3 +376,49 @@ main{
 
 
 }
+                            /*EMPIEZA CONTACTO*/
+.containerForm{
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+} 
+    .containerForm .formulario{
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        border: 3px solid #fff;
+        background-color: #424632;
+        border-radius: 10px;
+        flex-direction: column;
+        flex-wrap: wrap;
+        width: 80%;
+        height:70%;
+        text-align: center;
+    }
+        .containerForm .formulario label{
+            font-weight: bolder;
+            color: #fff;
+        }
+            .containerForm .formulario label:hover{
+                text-decoration: underline;
+            }
+        .containerForm .formulario input, textarea
+            {
+            display: inline;
+            text-align: center;
+            width: 50%;
+            font-weight: bolder;
+            color: #000;
+        }
+        .containerForm .formulario .formImg{
+            width: 10%;
+            display: flex;
+            text-align: center;
+        }
+.containerForm iframe{
+    display: flex;
+    width: 80%;
+}        
