--- a/views/alimentos.html
+++ b/views/alimentos.html
@@ -7,7 +7,7 @@
       <!--link a css bs-->
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
       <!--link a mi css-->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Finca Don Juan</title>
     <link rel="shortcut icon" href="../img/1.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/e18cc0d570.js" crossorigin="anonymous"></script>
@@ -32,17 +32,293 @@
             </div>
             <div class="linea"></div>
                   <!--ends header--> 
-    <h2>Alimentos naturales</h2> 
-    <main class="alimentos"> 
-                        <!--producto1-->
-       
-        <div class="alimento">
-            <div class="imgAlimento">
-                <img src="../img/pistachos-alimentos.jpg" alt="pistachos">
-            </div>
+    <h1>Alimentos naturales</h1> 
+<main class="alimentos">
+                            <!--ALIMENTO1-->
+<div class="alimento">
+    <div class="container">	
+    <!-- Start	Product details -->
+        <div class="product-details">
+            <!-- 	Product Name -->
+        <h2>Pistachos</h2>   
+        <p class="information">Los pistachos son uno de los frutos secos más saludables porque contienen un equilibrio completo de nutrientes: carbohidratos, proteínas, aminoácidos, grasas y fibra dietética. </p>  
+    <!-- 		Control -->
+            <div class="control">
+                <a href="pistacho.html" class="btn btnAlimento">
+                    <span class="price">Ir a</span>
+                    <span class="buy">Comprar ya!</span>
+                </a>        
+            </div>           
+        </div>
+        <div class="product-image">
+            <img src="../img/pistachos-alimentos.jpg" alt="pistacho">
+            <div class="info">
+        <ul>
+            <li>-Cantidades cada 100g-</li>
+            <li><strong>Agua</strong> : 4,37g</li>
+            <li><strong>Calorias</strong> : 560kcal</li>
+            <li><strong>Proteinas</strong> : 20g</li>
+            <li><strong>Grasas totales</strong> : 45g</li>
+        </ul>
+    </div>
+    </div>
+    <!--  End product image  -->
+
+
+    </div>
+</div>
+                                                                                            <!--ALIMENTO2-->
+
+<div class="alimento">
+    <div class="container">	
+    <!-- Start	Product details -->
+        <div class="product-details">
+            <!-- 	Product Name -->
+        <h2>Aceite oliva</h2>   
+        <p class="information">Protege contra la inflamación, el estrés oxidativo y el riesgo cardiovascular provocados por el envejecimiento.</p>  
+    <!-- 		Control -->
+    <div class="control">
+    <!-- Start Button buying -->
+        <button class="btn btnAlimento">
+    <!-- 		the Price -->
+            <span class="price">Ir a</span>
+    <!-- 		shopping cart icon-->
+    <!-- 		Buy Now / ADD to Cart-->
+        <span class="buy">Comprar ya!</span>
+        </button>
+        <!-- End Button buying -->
+        
+    </div>
+                
+    </div>
+    <div class="product-image">
+        
+        <img src="../img/olivaalimentos.jpg" alt="Aceite de oliva">
+        
+    <!-- 	product Information-->
+    <div class="info">
+        <ul>
+            <li>-Cantidades cada 100g-</li>
+            <li><strong>Agua</strong> : 4,37g</li>
+            <li><strong>Calorias</strong> : 560kcal</li>
+            <li><strong>Proteinas</strong> : 20g</li>
+            <li><strong>Grasas totales</strong> : 45g</li>
+        </ul>
+    </div>
+    </div>
+    <!--  End product image  -->
+
+
+    </div>
+</div>
+                                                        <!--ALIMENTO3-->
+<div class="alimento ">
+    <div class="container">	
+    <!-- Start	Product details -->
+        <div class="product-details">
+            <!-- 	Product Name -->
+        <h2>Pistachos</h2>   
+        <p class="information">Además de usarse como edulcorante natural, la miel se usa como antiinflamatorio, antioxidante y agente antibiótico.</p>  
+    <!-- 		Control -->
+    <div class="control">
+        
+    <!-- Start Button buying -->
+        <button class="btn btnAlimento">
+    <!-- 		the Price -->
+            <span class="price">Ir a</span>
+    <!-- 		shopping cart icon-->
+    <!-- 		Buy Now / ADD to Cart-->
+        <span class="buy">Comprar ya!</span>
+        </button>
+        <!-- End Button buying -->
+        
+    </div>
+                
+    </div>
+    <div class="product-image">
+        
+        <img src="../img/miel-alimento.jpg" alt="pasas">
+        
+    <!-- 	product Information-->
+    <div class="info">
+        <ul>
+            <li>-Cantidades cada 100g-</li>
+            <li><strong>Agua</strong> : 4,37g</li>
+            <li><strong>Calorias</strong> : 560kcal</li>
+            <li><strong>Proteinas</strong> : 20g</li>
+            <li><strong>Grasas totales</strong> : 45g</li>
+        </ul>
+    </div>
+    </div>
+    <!--  End product image  -->
+
+
+    </div>
+</div>
+                                            <!--ALIMENTO4-->
+<div class="alimento">
+    <div class="container">	
+    <!-- Start	Product details -->
+        <div class="product-details">
+            <!-- 	Product Name -->
+        <h2>Pasas</h2>   
+        <p class="information">Ayudan a controlar la glucosa por sus ácidos omega-3. Regulan la presión arterial y la diabetes 1 y 2. Previenen la hipertensión gracias a su gran cantidad de antioxidantes.</p>  
+    <!-- 		Control -->
+    <div class="control">
+        
+    <!-- Start Button buying -->
+        <button class="btn btnAlimento">
+    <!-- 		the Price -->
+            <span class="price">Ir a</span>
+    <!-- 		shopping cart icon-->
+    <!-- 		Buy Now / ADD to Cart-->
+        <span class="buy">Comprar ya!</span>
+        </button>
+        <!-- End Button buying -->
+        
+    </div>
+                
+    </div>
+    <div class="product-image">
+        
+        <img src="../img/pasas-alimentos.jpg" alt="miel">
+        
+    <!-- 	product Information-->
+    <div class="info">
+        <ul>
+            <li>-Cantidades cada 100g-</li>
+            <li><b>Proteinas</b>: 4,37g</li>
+            <li><strong>Grasas</strong>0</li>
+            <li><strong>Azucares</strong>12</li>
+            <li><strong></strong>2 - 3 feet</li>
+        </ul>
+    </div>
+    </div>
+    <!--  End product image  -->
+
+
+    </div>
+</div>
+                                                        
+</main>
+
+
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        <!--producto1-->
+       <!-- <div class="alimento">
             <div class="infoAlimento">
-                <div class="tabla">
-                    <table class="table table table-dark table-striped">
+                <a href="pistacho.html">
+                    <img src="../img/pistachos-alimentos.jpg" alt="Pistachos">
+                </a>
+                <h2 class="tituloALimento">Pistachos</h2>
+            </div>
+            <div class="descAlimento">
+                    <table class="table table-dark table-striped">
                         <tbody>
                         <tr>
                             <th>Nombre</th>
@@ -64,15 +340,14 @@
                             <td>45 g</td>
                         </tr>
                     </table>
-                </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime magni iste aliquam ipsa, at deserunt vero quo repudiandae, rem quas eaque sed expedita vitae nisi. Vero repellat aliquam unde debitis sapiente error distinctio possimus deleniti numquam est porro quaerat doloribus non rerum eaque, accusamus excepturi. Magni quibusdam cum deserunt inventore perferendis laboriosam ipsam sapiente quas ea veniam! Illo modi temporibus nostrum, aut amet alias facilis fuga eligendi libero itaque necessitatibus!</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt repudiandae natus dolorem, ea maiores libero recusandae ullam laboriosam reiciendis, hic minima eaque possimus corrupti odio?</p>
                     <a href="pistacho.html" class="btn">Comprar</a>
-                </div>
+            </div>
             
-        </div>
-                                    <!--producto2-->
+        </div>-->
+                                    <!-- producto2 -->
        
-         <div class="alimento">
+      <!--   <div class="alimento">
             <div class="imgAlimento">
                 <img src="../img/aceite-tienda.jpg" alt="pistachos">
             </div>
@@ -105,8 +380,8 @@
                     <a href="oliva.html" class="btn">Comprar</a>
                 </div>
         </div>
-                                 <!--producto3-->
-         <div class="alimento">
+                                 producto3-->
+         <!-- <div class="alimento">
             <div class="imgAlimento">
                 <img src="../img/miel-alimento.jpg" alt="pistachos">
             </div>
@@ -139,7 +414,7 @@
                     <a href="miel.html" class="btn">Comprar</a>
                 </div>
         </div>
-                                            <!--producto4-->
+                                            <!--producto4
          <div class="alimento mb-3">
             <div class="imgAlimento">
                 <img src="../img/pasas-alimentos.jpg" alt="pistachos">
@@ -172,15 +447,20 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur sint distinctio dolor ullam ab nulla voluptatibus accusamus ipsum modi non laborum suscipit odio expedita, reiciendis, id nam labore odit consequatur quisquam aliquid omnis? Nihil saepe facilis ducimus, ullam pariatur atque. Tempora, ut. Sequi earum dicta repudiandae sapiente sed harum, error quos ex perferendis corrupti explicabo molestias nisi aperiam ducimus excepturi cupiditate vitae. Ipsum itaque blanditiis minus aspernatur consequuntur? Quia, natus.</p>
                     <a href="pasas.html" class="btn">Comprar</a>
                 </div>
-        </div>
-    </main>
+        </div> -->
                   <!--ends main-->
                   <!--Empieza footer-->
         <footer>
         <div>
-            <a href="https://web.whatsapp.com/" target="_blank"><i class="fa-brands fa-whatsapp fa-2xl"></i></a>
-            <a href="https://instagram.com/" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a>
-            <a href="https://facebook.com/" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></a>
+            <a href="https://web.whatsapp.com/" target="_blank">
+                <i class="fa-brands fa-whatsapp fa-2xl"></i>
+            </a>
+            <a href="https://instagram.com/" target="_blank">
+                <i class="fa-brands fa-instagram fa-2xl"></i>
+            </a>
+            <a href="https://facebook.com/" target="_blank">
+                <i class="fa-brands fa-facebook fa-2xl"></i>
+            </a>
         </div>
     </footer>
                   <!--ends footer-->
