--- a/views/pistacho.html
+++ b/views/pistacho.html
@@ -11,7 +11,7 @@
          <!--link a css bs-->
          <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
          <!--link a mi css-->
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/main.css">
     
     </head>
     <body>
@@ -34,13 +34,12 @@
             </div>
                   <!--ends header-->
                   <div class="linea"></div>
-                  <!--Empieza producto--> 
-    
-   <!-- <main class="producto col-sm-12 col-md-6">-->
+                  <!--Empieza producto-->   
+   <main>
      <h1>Pistachos</h1>
      <main class="producto">
         <div class="containerImg">
-            <img src="../img/pistachos-producto.png" class="rounded-start" alt="Pistachos">
+            <img class="img-thumbnail" src="../img/pistachos-producto.png" class="rounded-start" alt="Pistachos">
         </div>
         <div class="containerData">
             <div class="containerInfo">
@@ -49,7 +48,7 @@
             <div class="comprar">
                 <label for="kilos">Kilos/$5000</label>
                 <input type="number" required name="Kilos" id="kilos" min="1" max="50">
-                <button class="btn boton me-2 mb-1"> Comprar</button>
+                <button class="btn me-2 mb-1"> Comprar</button>
                 <a href="alimentos.html" class="btn boton">Ir a informacion nutricional</a>
                 
             </div>
